--- a/index.html
+++ b/index.html
@@ -1,2 +1,117 @@
-<link rel="stylesheet" href="style.css">
-<script src="script.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Personal Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
+</head>
+<body>
+  <header>
+    <div class="container">
+      <div class="logo">
+        <h1><a href="#">My Name</a></h1>
+        <p>Department Name</p>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Publications</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">Teaching</a></li>
+          <li><a href="#">Activities</a></li>
+          <li><a href="#">Group Dissemination</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <section id="home">
+      <div class="container">
+        <div class="profile">
+          <img src="profile.jpg" alt="My Profile Picture">
+          <h2>My Name</h2>
+          <p>Department Name</p>
+          <ul class="contact">
+            <li><i class="fa fa-phone"></i> Phone Number</li>
+            <li><i class="fa fa-envelope"></i> Email Address 1</li>
+            <li><i class="fa fa-envelope"></i> Email Address 2</li>
+            <li><i class="fa fa-envelope"></i> Email Address 3</li>
+          </ul>
+          <ul class="social">
+            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="#"><i class="fa fa-google"></i></a></li>
+            <li><a href="#"><i class="fa fa-researchgate"></i></a></li>
+          </ul>
+        </div>
+        <div class="research">
+          <h3>Research Interests</h3>
+          <ul>
+            <li>Interest 1</li>
+            <li>Interest 2</li>
+            <li>Interest 3</li>
+          </ul>
+          <h3>News</h3>
+          <ul>
+            <li>News Item 1</li>
+            <li>News Item 2</li>
+            <li>News Item 3</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section id="publications">
+      <div class="container">
+        <h2>Publications</h2>
+        <ul>
+          <li>Publication 1</li>
+          <li>Publication 2</li>
+          <li>Publication 3</li>
+        </ul>
+      </div>
+    </section>
+    <section id="projects">
+      <div class="container">
+        <h2>Projects</h2>
+        <ul>
+          <li>Project 1</li>
+          <li>Project 2</li>
+          <li>Project 3</li>
+        </ul>
+      </div>
+    </section>
+    <section id="teaching">
+      <div class="container">
+        <h2>Teaching</h2>
+        <ul>
+          <li>Course 1</li>
+           <li>Course 2</li>
+          <li>Course 3</li>
+        </ul>
+      </div>
+    </section>
+    <section id="activities">
+      <div class="container">
+        <h2>Activities</h2>
+        <ul>
+          <li>Activity 1</li>
+          <li>Activity 2</li>
+          <li>Activity 3</li>
+        </ul>
+      </div>
+    </section>
+    <section id="group-dissemination">
+      <div class="container">
+        <h2>Group Dissemination</h2>
+        <ul>
+          <li>Dissemination 1</li>
+          <li>Dissemination 2</li>
+          <li>Dissemination 3</li>
+        </ul>
+      </div>
+    </section>
+  </main>
+  <script src="script.js"></script>
+</body>
+</html>
