--- a/index.html
+++ b/index.html
@@ -1,20 +1,216 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Personal Portfolio</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
-</head>
-<body>
-  <header>
-    <div class="container">
-      <div class="logo">
-        <h1><a href="#">My Name</a></h1>
-        <p>Department Name</p>
+  <head>
+    <meta charset="UTF-8">
+    <title>My Personal Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <div class="logo">
+          <h1>My Portfolio</h1>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#publications">Publications</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#teaching">Teaching</a></li>
+            <li><a href="#activities">Activities</a></li>
+            <li><a href="#group-dissemination">Group Dissemination</a></li>
+          </ul>
+        </nav>
       </div>
-      <nav>
+    </header>
+    <section id="home" class="parallax-section">
+      <div class="parallax-bg" style="background-image: url('background.jpg');"></div>
+      <div class="container">
+        <div class="home-content">
+          <div class="home-info">
+            <h2>John Doe</h2>
+            <p>Department of Computer Science</p>
+            <p>Phone: 123-456-7890</p>
+            <p>Email: <a href="mailto:johndoe@gmail.com"><i class="far fa-envelope"></i> johndoe@gmail.com</a></p>
+            <p>Email: <a href="mailto:doejohn@yahoo.com"><i class="far fa-envelope"></i> doejohn@yahoo.com</a></p>
+            <p>Email: <a href="mailto:john.doe@outlook.com"><i class="far fa-envelope"></i> john.doe@outlook.com</a></p>
+            <div class="social-media">
+              <a href="https://www.linkedin.com/in/john-doe/" target="_blank"><i class="fab fa-linkedin"></i></a>
+              <a href="https://scholar.google.com/citations?user=1234567890abcdefg" target="_blank"><i class="fas fa-graduation-cap"></i></a>
+              <a href="https://www.researchgate.net/profile/John-Doe" target="_blank"><i class="fas fa-file-alt"></i></a>
+            </div>
+            <p>Research Interests: Computer Science, Artificial Intelligence, Machine Learning, Natural Language Processing</p>
+          </div>
+          <div class="home-image">
+            <img src="profile.jpg" alt="John Doe">
+          </div>
+        </div>
+        <div class="home-news">
+          <h3>News</h3>
+          <ul>
+            <li>Presented paper at the 2022 Conference on Artificial Intelligence</li>
+            <li>Received grant for research project on Natural Language Processing</li>
+            <li>Co-authored book on Machine Learning published by MIT Press</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section id="publications" class="fade-section">
+      <div class="fade-bg"></div>
+      <div class="container">
+        <h2>Publications</h2>
+        <ul>
+          <li>Doe, J., Smith, A. (2022). "A Survey of
+                     Machine Learning Techniques for Image Recognition." Journal of Artificial Intelligence, 12(3), 45-62.</li>
+          <li>Johnson, M., Doe, J. (2021). "Natural Language Processing for Sentiment Analysis." Proceedings of the 2021 Conference on Natural Language Processing, 23-29.</li>
+          <li>Doe, J., Lee, C. (2020). "An Introduction to Deep Learning." MIT Press.</li>
+        </ul>
+      </div>
+    </section>
+    <section id="projects" class="parallax-section">
+      <div class="parallax-bg" style="background-image: url('projects.jpg');"></div>
+      <div class="container">
+        <h2>Projects</h2>
+        <div class="project">
+          <div class="project-image">
+            <img src="project1.jpg" alt="Project 1">
+          </div>
+          <div class="project-info">
+            <h3>Project 1</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis euismod metus a nisl commodo sodales.</p>
+            <a href="#" class="project-button">Learn More</a>
+          </div>
+        </div>
+        <div class="project">
+          <div class="project-image">
+            <img src="project2.jpg" alt="Project 2">
+          </div>
+          <div class="project-info">
+            <h3>Project 2</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis euismod metus a nisl commodo sodales.</p>
+            <a href="#" class="project-button">Learn More</a>
+          </div>
+        </div>
+        <div class="project">
+          <div class="project-image">
+            <img src="project3.jpg" alt="Project 3">
+          </div>
+          <div class="project-info">
+            <h3>Project 3</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis euismod metus a nisl commodo sodales.</p>
+            <a href="#" class="project-button">Learn More</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="teaching" class="fade-section">
+      <div class="fade-bg"></div>
+      <div class="container">
+        <h2>Teaching</h2>
+        <ul>
+          <li>Introduction to Artificial Intelligence (Undergraduate)</li>
+          <li>Machine Learning (Graduate)</li>
+          <li>Natural Language Processing (Graduate)</li>
+        </ul>
+      </div>
+    </section>
+    <section id="activities" class="parallax-section">
+      <div class="parallax-bg" style="background-image: url('activities.jpg');"></div>
+      <div class="container">
+        <h2>Activities</h2>
+        <ul>
+          <li>Member of the Association for Computing Machinery</li>
+          <li>Reviewer for the Journal of Artificial Intelligence</li>
+          <li>Volunteer at local high school robotics competition</li>
+        </ul>
+      </div>
+    </section>
+    <section id="group-dissemination" class="fade-section">
+      <div class="fade-bg"></div>
+      <div class="container">
+        <h2>Group Dissemination</h2>
+        <ul>
+          <li>Doe, J., Smith, A. (
+                      "A Survey of Machine Learning Techniques for Image Recognition." Proceedings of the 2020 Conference on Machine Learning, 14-20.</li>
+          <li>Lee, C., Doe, J. (2019). "Deep Learning for Speech Recognition." Journal of Artificial Intelligence, 12(3), 45-62.</li>
+          <li>Johnson, M., Doe, J. (2021). "Natural Language Processing for Sentiment Analysis." Proceedings of the 2021 Conference on Natural Language Processing, 23-29.</li>
+          <li>Doe, J., Lee, C. (2020). "An Introduction to Deep Learning." MIT Press.</li>
+        </ul>
+      </div>
+    </section>
+    <section id="projects" class="parallax-section">
+      <div class="parallax-bg" style="background-image: url('projects.jpg');"></div>
+      <div class="container">
+        <h2>Projects</h2>
+        <div class="project">
+          <div class="project-image">
+            <img src="project1.jpg" alt="Project 1">
+          </div>
+          <div class="project-info">
+            <h3>Project 1</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis euismod metus a nisl commodo sodales.</p>
+            <a href="#" class="project-button">Learn More</a>
+          </div>
+        </div>
+        <div class="project">
+          <div class="project-image">
+            <img src="project2.jpg" alt="Project 2">
+          </div>
+          <div class="project-info">
+            <h3>Project 2</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis euismod metus a nisl commodo sodales.</p>
+            <a href="#" class="project-button">Learn More</a>
+          </div>
+        </div>
+        <div class="project">
+          <div class="project-image">
+            <img src="project3.jpg" alt="Project 3">
+          </div>
+          <div class="project-info">
+            <h3>Project 3</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis euismod metus a nisl commodo sodales.</p>
+            <a href="#" class="project-button">Learn More</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="teaching" class="fade-section">
+      <div class="fade-bg"></div>
+      <div class="container">
+        <h2>Teaching</h2>
+        <ul>
+          <li>Introduction to Artificial Intelligence (Undergraduate)</li>
+          <li>Machine Learning (Graduate)</li>
+          <li>Natural Language Processing (Graduate)</li>
+        </ul>
+      </div>
+    </section>
+    <section id="activities" class="parallax-section">
+      <div class="parallax-bg" style="background-image: url('activities.jpg');"></div>
+      <div class="container">
+        <h2>Activities</h2>
+        <ul>
+          <li>Member of the Association for Computing Machinery</li>
+          <li>Reviewer for the Journal of Artificial Intelligence</li>
+          <li>Volunteer at local high school robotics competition</li>
+        </ul>
+      </div>
+    </section>
+    <section id="group-dissemination" class="fade-section">
+      <div class="fade-bg"></div>
+      <div class="container">
+        <h2>Group Dissemination</h2>
+        <ul>
+          <li>Smith, J., Doe, J. (2022). "A Framework for Evaluating Machine Learning Models." Proceedings of the 2022 Conference on Machine Learning, 16-22.</li>
+          <li>Doe, J., Lee, C. (2021). "Deep Learning for Image Recognition." Proceedings of the 2021 Conference on Artificial Intelligence, 12-18.</li>
+          <li>Johnson, M., Smith, J., Doe, J. (2020). "Sentiment Analysis using Natural Language Processing." Proceedings of the 2020 Conference on Natural Language Processing, 8-13.</li>
+        </ul>
+      </div>
+    </section>
+    <footer>
+      <div class="container">
+        <p>&copy; 2023 John Doe. All Rights Reserved.</p>
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Publications</a></li>
@@ -23,95 +219,11 @@
           <li><a href="#">Activities</a></li>
           <li><a href="#">Group Dissemination</a></li>
         </ul>
-      </nav>
-    </div>
-  </header>
-  <main>
-    <section id="home">
-      <div class="container">
-        <div class="profile">
-          <img src="profile.jpg" alt="My Profile Picture">
-          <h2>My Name</h2>
-          <p>Department Name</p>
-          <ul class="contact">
-            <li><i class="fa fa-phone"></i> Phone Number</li>
-            <li><i class="fa fa-envelope"></i> Email Address 1</li>
-            <li><i class="fa fa-envelope"></i> Email Address 2</li>
-            <li><i class="fa fa-envelope"></i> Email Address 3</li>
-          </ul>
-          <ul class="social">
-            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-            <li><a href="#"><i class="fa fa-google"></i></a></li>
-            <li><a href="#"><i class="fa fa-researchgate"></i></a></li>
-          </ul>
-        </div>
-        <div class="research">
-          <h3>Research Interests</h3>
-          <ul>
-            <li>Interest 1</li>
-            <li>Interest 2</li>
-            <li>Interest 3</li>
-          </ul>
-          <h3>News</h3>
-          <ul>
-            <li>News Item 1</li>
-            <li>News Item 2</li>
-            <li>News Item 3</li>
-          </ul>
-        </div>
       </div>
-    </section>
-    <section id="publications">
-      <div class="container">
-        <h2>Publications</h2>
-        <ul>
-          <li>Publication 1</li>
-          <li>Publication 2</li>
-          <li>Publication 3</li>
-        </ul>
-      </div>
-    </section>
-    <section id="projects">
-      <div class="container">
-        <h2>Projects</h2>
-        <ul>
-          <li>Project 1</li>
-          <li>Project 2</li>
-          <li>Project 3</li>
-        </ul>
-      </div>
-    </section>
-    <section id="teaching">
-      <div class="container">
-        <h2>Teaching</h2>
-        <ul>
-          <li>Course 1</li>
-           <li>Course 2</li>
-          <li>Course 3</li>
-        </ul>
-      </div>
-    </section>
-    <section id="activities">
-      <div class="container">
-        <h2>Activities</h2>
-        <ul>
-          <li>Activity 1</li>
-          <li>Activity 2</li>
-          <li>Activity 3</li>
-        </ul>
-      </div>
-    </section>
-    <section id="group-dissemination">
-      <div class="container">
-        <h2>Group Dissemination</h2>
-        <ul>
-          <li>Dissemination 1</li>
-          <li>Dissemination 2</li>
-          <li>Dissemination 3</li>
-        </ul>
-      </div>
-    </section>
-  </main>
-  <script src="script.js"></script>
-</body>
+    </footer>
+    <script src="script.js"></script>
+  </body>
 </html>
+
+
+
