--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>My Personal Portfolio</title>
+    <title>DHANESH RAJ</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
@@ -32,13 +32,13 @@
             <h2>John Doe</h2>
             <p>Department of Computer Science</p>
             <p>Phone: 123-456-7890</p>
-            <p>Email: <a href="mailto:johndoe@gmail.com"><i class="far fa-envelope"></i> johndoe@gmail.com</a></p>
-            <p>Email: <a href="mailto:doejohn@yahoo.com"><i class="far fa-envelope"></i> doejohn@yahoo.com</a></p>
-            <p>Email: <a href="mailto:john.doe@outlook.com"><i class="far fa-envelope"></i> john.doe@outlook.com</a></p>
+            <p>Email: <a href="mailto:imdhaneshraj@gmail.com"><i class="far fa-envelope"></i> imdhaneshraj@gmail.com</a></p>
+            <p>Email: <a href="mailto:dhaneshraj@am.amrita.edu"><i class="far fa-envelope"></i> dhaneshraj@am.amrita.edu/a></p>
+            <p>Email: <a href="mailto:dhaneshraj@ieee.org"><i class="far fa-envelope"></i> dhaneshraj@ieee.org</a></p>
             <div class="social-media">
-              <a href="https://www.linkedin.com/in/john-doe/" target="_blank"><i class="fab fa-linkedin"></i></a>
-              <a href="https://scholar.google.com/citations?user=1234567890abcdefg" target="_blank"><i class="fas fa-graduation-cap"></i></a>
-              <a href="https://www.researchgate.net/profile/John-Doe" target="_blank"><i class="fas fa-file-alt"></i></a>
+              <a href="https://in.linkedin.com/in/dhaneshraj" target="_blank"><i class="fab fa-linkedin"></i></a>
+              <a href="https://scholar.google.co.in/citations?user=CSB7DU0AAAAJ&hl=en" target="_blank"><i class="fas fa-graduation-cap"></i></a>
+              <a href="https://www.researchgate.net/profile/Dhanesh-Raj" target="_blank"><i class="fas fa-file-alt"></i></a>
             </div>
             <p>Research Interests: Computer Science, Artificial Intelligence, Machine Learning, Natural Language Processing</p>
           </div>
