--- a/index.html
+++ b/index.html
@@ -1,42 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dhanesh Raj's Portfolio</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="path_to_compiled_css">
 </head>
-<body>
-    <!-- Navigation Bar -->
-    <nav>
-        <ul>
-            <li><a href="#main">Home</a></li>
-            <li><a href="#timeline">Timeline</a></li>
-            <li><a href="#publications">Publications</a></li>
-            <!-- Add more navigation links here -->
-        </ul>
-    </nav>
 
+<body>
     <!-- Main Page -->
-    <section id="main">
-        <img src="images/profile.jpg" alt="Profile Picture">
-        <h1>Dhanesh Raj</h1>
-        <p>Short Bio...</p>
-        <!-- Add more details here -->
-    </section>
+    <header>
+        <div class="profile-section">
+            <img src="assets/images/profile_picture.jpg" alt="Profile Picture">
+            <h1>Dhanesh Raj</h1>
+            <p>Short Bio: A passionate researcher and academician...</p>
+        </div>
+
+        <!-- Social Media Links with Hover Effects -->
+        <div class="social-media">
+            <a href="link_to_linkedin" class="linkedin">LinkedIn</a>
+            <a href="link_to_google_scholar" class="google-scholar">Google Scholar</a>
+            <a href="link_to_researchgate" class="researchgate">ResearchGate</a>
+            <a href="link_to_twitter" class="twitter">Twitter</a>
+        </div>
+
+        <nav>
+            <!-- Navigation Bar -->
+            <ul>
+                <li><a href="#publications">Publications</a></li>
+                <li><a href="#achievements">Achievements</a></li>
+                <li><a href="#activities">Activities</a></li>
+                <li><a href="#contacts">Contacts</a></li>
+                <li><a href="assets/pdfs/resume.pdf" download>Resume</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <!-- Interactive Timeline -->
     <section id="timeline">
-        <!-- Timeline items here -->
+        <!-- Placeholder for the timeline. You'll integrate TimelineJS or a similar library here. -->
+        <h2>My Academic Journey</h2>
+        <div class="timeline-content">
+            <!-- Timeline items will go here -->
+        </div>
     </section>
 
-    <!-- Publications Carousel -->
+    <!-- Publication Carousel -->
     <section id="publications">
-        <!-- Carousel items here -->
+        <h2>Publications</h2>
+        <div class="carousel">
+            <!-- Placeholder for the carousel. You'll integrate Slick Carousel or a similar library here. -->
+            <!-- Sample carousel item -->
+            <div class="carousel-item">
+                <img src="assets/images/sample_publication.jpg" alt="Sample Publication">
+                <p>Publication Title</p>
+            </div>
+        </div>
     </section>
 
-    <!-- And so on for other sections... -->
+    <!-- Animated Infographics -->
+    <section id="infographics">
+        <h2>Research Infographics</h2>
+        <!-- Placeholder for infographics. You'll integrate D3.js or a similar library here. -->
+    </section>
 
-    <script src="js/scripts.js"></script>
+    <!-- Interactive CV -->
+    <section id="cv">
+        <h2>Curriculum Vitae</h2>
+        <!-- Placeholder for the interactive CV. -->
+        <div class="cv-content">
+            <!-- CV sections will go here -->
+        </div>
+    </section>
+
+    <!-- Lightbox Gallery -->
+    <section id="gallery">
+        <h2>Research Gallery</h2>
+        <!-- Placeholder for the gallery. You'll integrate Lightbox2 or a similar library here. -->
+        <div class="gallery-content">
+            <!-- Gallery items will go here -->
+        </div>
+    </section>
+
+    <!-- Dynamic Word Cloud -->
+    <section id="word-cloud">
+        <h2>Research Word Cloud</h2>
+        <!-- Placeholder for the word cloud. You'll integrate d3-cloud or a similar library here. -->
+    </section>
+
+    <!-- Footer or other sections -->
+    <footer>
+        <p>&copy; 2023 Dhanesh Raj. All rights reserved.</p>
+    </footer>
+
+    <script src="path_to_your_javascript_file"></script>
 </body>
+
 </html>
