--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dhanesh Raj's Portfolio</title>
-    <link rel="stylesheet" href="path_to_compiled_css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -39,10 +39,9 @@
 
     <!-- Interactive Timeline -->
     <section id="timeline">
-        <!-- Placeholder for the timeline. You'll integrate TimelineJS or a similar library here. -->
         <h2>My Academic Journey</h2>
         <div class="timeline-content">
-            <!-- Timeline items will go here -->
+            <!-- Placeholder for the timeline. You'll integrate TimelineJS or a similar library here. -->
         </div>
     </section>
 
@@ -51,7 +50,6 @@
         <h2>Publications</h2>
         <div class="carousel">
             <!-- Placeholder for the carousel. You'll integrate Slick Carousel or a similar library here. -->
-            <!-- Sample carousel item -->
             <div class="carousel-item">
                 <img src="assets/images/sample_publication.jpg" alt="Sample Publication">
                 <p>Publication Title</p>
@@ -89,12 +87,12 @@
         <!-- Placeholder for the word cloud. You'll integrate d3-cloud or a similar library here. -->
     </section>
 
-    <!-- Footer or other sections -->
+    <!-- Footer -->
     <footer>
         <p>&copy; 2023 Dhanesh Raj. All rights reserved.</p>
     </footer>
 
-    <script src="path_to_your_javascript_file"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
