--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Main Page -->
     <header>
         <div class="profile-section">
-            <img src="assets/images/profile_picture.jpg" alt="Profile Picture">
+            <img src="profile.jpg" alt="Profile Picture">
             <h1>Dhanesh Raj</h1>
             <p>Short Bio: A passionate researcher and academician...</p>
         </div>
@@ -32,7 +32,7 @@
                 <li><a href="#achievements">Achievements</a></li>
                 <li><a href="#activities">Activities</a></li>
                 <li><a href="#contacts">Contacts</a></li>
-                <li><a href="assets/pdfs/resume.pdf" download>Resume</a></li>
+                <li><a href="resume.pdf" download>Resume</a></li>
             </ul>
         </nav>
     </header>
@@ -51,7 +51,7 @@
         <div class="carousel">
             <!-- Placeholder for the carousel. You'll integrate Slick Carousel or a similar library here. -->
             <div class="carousel-item">
-                <img src="assets/images/sample_publication.jpg" alt="Sample Publication">
+                <img src="project1.jpg" alt="Sample Publication">
                 <p>Publication Title</p>
             </div>
         </div>
