--- a/index.html
+++ b/index.html
@@ -65,7 +65,13 @@
 
         <section id="publications">
             <h2>Publications</h2>
-            <!-- Add content for publications -->
+            <div class="carousel">
+                <button class="prev">Prev</button>
+                <div class="carousel-item">Publication 1</div>
+                <div class="carousel-item">Publication 2</div>
+                <div class="carousel-item">Publication 3</div>
+                <button class="next">Next</button>
+            </div>
         </section>
 
         <section id="research-interests">
@@ -92,5 +98,6 @@
             <a href="https://dhanesh-raj.github.io/dhaneshraj/"><img src="path/to/github-icon.png" alt="GitHub"></a>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
