--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#publications">Publications</a></li>
-                <li><a href="#research-interests">Research Interests</a></li>
-                <li><a href="#teaching">Teaching</a></li>
-                <li><a href="#awards">Awards/Honor/Services</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="publications.html">Publications</a></li>
+                <li><a href="research-interests.html">Research Interests</a></li>
+                <li><a href="teaching.html">Teaching</a></li>
+                <li><a href="awards.html">Awards/Honor/Services</a></li>
             </ul>
         </nav>
     </header>
@@ -57,37 +57,6 @@
                 </div>
             </div>
         </section>
-
-        <section id="projects">
-            <h2>Projects</h2>
-            <!-- Add content for projects -->
-        </section>
-
-        <section id="publications">
-            <h2>Publications</h2>
-            <div class="carousel">
-                <button class="prev">Prev</button>
-                <div class="carousel-item">Publication 1</div>
-                <div class="carousel-item">Publication 2</div>
-                <div class="carousel-item">Publication 3</div>
-                <button class="next">Next</button>
-            </div>
-        </section>
-
-        <section id="research-interests">
-            <h2>Research Interests</h2>
-            <!-- Add content for research interests -->
-        </section>
-
-        <section id="teaching">
-            <h2>Teaching</h2>
-            <!-- Add content for teaching -->
-        </section>
-
-        <section id="awards">
-            <h2>Awards/Honor/Services</h2>
-            <!-- Add content for awards/honor/services -->
-        </section>
     </main>
     <footer>
         <p>&copy; 2024 Ariadne Snyder. All Rights Reserved.</p>
@@ -98,6 +67,5 @@
             <a href="https://dhanesh-raj.github.io/dhaneshraj/"><img src="path/to/github-icon.png" alt="GitHub"></a>
         </div>
     </footer>
-    <script src="script.js"></script>
 </body>
 </html>
