--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         <section class="intro">
             <div class="intro-left">
                 <img src="path/to/profile.img" alt="Profile Picture" class="profile-img">
-                <h1>Ariadne Snyder</h1>
-                <p>Communications</p>
+                <h1>Dhanesh Raj</h1>
+                <p>Senior Research Associate</p>
                 <button>Email me</button>
                 <div class="social-icons">
-                    <a href="https://www.linkedin/dhanesh.raj"><img src="path/to/linkedin-icon.png" alt="LinkedIn"></a>
-                    <a href="https://www.facebook/dhanesh.raj"><img src="path/to/facebook-icon.png" alt="Facebook"></a>
-                    <a href="https://www.instagram/dhanesh.raj"><img src="path/to/instagram-icon.png" alt="Instagram"></a>
-                    <a href="https://dhanesh-raj.github.io/dhaneshraj/"><img src="path/to/github-icon.png" alt="GitHub"></a>
+                    <a href="https://www.linkedin/dhanesh.raj"><img src="./linkedin-icon.png" alt="LinkedIn"></a>
+                    <a href="https://www.facebook/dhanesh.raj"><img src="./facebook-icon.png" alt="Facebook"></a>
+                    <a href="https://www.instagram/dhanesh.raj"><img src="./instagram-icon.png" alt="Instagram"></a>
+                    <a href="https://dhanesh-raj.github.io/dhaneshraj/"><img src="./github-icon.png" alt="GitHub"></a>
                 </div>
                 <div class="contact-info">
                     <p>Address:<br>
@@ -47,12 +47,12 @@
                 <h2>About Me (she/her)</h2>
                 <p>I am an energetic and passionate college student working towards a communications degree at Murrayfield School of Marketing. I aim to use my skills in writing, photography, and public relations in a summer internship at your organization.</p>
                 <div class="scholar-links">
-                    <a href="https://dhanesh-raj.github.io/dhaneshraj/"><img src="path/to/google-scholar-icon.png" alt="Google Scholar"></a>
-                    <a href="https://dhanesh-raj.github.io/dhaneshraj/"><img src="path/to/researchgate-icon.png" alt="ResearchGate"></a>
-                    <a href="https://dhanesh-raj.github.io/dhaneshraj/"><img src="path/to/orcid-icon.png" alt="Orcid"></a>
+                    <a href="https://dhanesh-raj.github.io/dhaneshraj/"><img src="./google-scholar-icon.png" alt="Google Scholar"></a>
+                    <a href="https://dhanesh-raj.github.io/dhaneshraj/"><img src="./researchgate-icon.png" alt="ResearchGate"></a>
+                    <a href="https://dhanesh-raj.github.io/dhaneshraj/"><img src="./orcid-icon.png" alt="Orcid"></a>
                 </div>
                 <div class="resume-portfolio-buttons">
-                    <a href="path/to/resume.pdf" class="btn">Resume</a>
+                    <a href="./resume.pdf" class="btn">Resume</a>
                     <a href="#portfolio" class="btn">Portfolio</a>
                 </div>
             </div>
@@ -61,10 +61,10 @@
     <footer>
         <p>&copy; 2024 Ariadne Snyder. All Rights Reserved.</p>
         <div class="social-media">
-            <a href="https://www.linkedin/dhanesh.raj"><img src="path/to/linkedin-icon.png" alt="LinkedIn"></a>
-            <a href="https://www.facebook/dhanesh.raj"><img src="path/to/facebook-icon.png" alt="Facebook"></a>
-            <a href="https://www.instagram/dhanesh.raj"><img src="path/to/instagram-icon.png" alt="Instagram"></a>
-            <a href="https://dhanesh-raj.github.io/dhaneshraj/"><img src="path/to/github-icon.png" alt="GitHub"></a>
+            <a href="https://www.linkedin/dhanesh.raj"><img src="./linkedin-icon.png" alt="LinkedIn"></a>
+            <a href="https://www.facebook/dhanesh.raj"><img src="./facebook-icon.png" alt="Facebook"></a>
+            <a href="https://www.instagram/dhanesh.raj"><img src="./instagram-icon.png" alt="Instagram"></a>
+            <a href="https://dhanesh-raj.github.io/dhaneshraj/"><img src="./github-icon.png" alt="GitHub"></a>
         </div>
     </footer>
 </body>
