--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 <p>Senior Research Associate</p>
                 <button>Email me</button>
                 <div class="social-icons">
-                    <a href="https://www.linkedin/dhanesh.raj"><img src="./linkedin-icon.png" alt="LinkedIn"></a>
-                    <a href="https://www.facebook/dhanesh.raj"><img src="./facebook-icon.png" alt="Facebook"></a>
-                    <a href="https://www.instagram/dhanesh.raj"><img src="./instagram-icon.png" alt="Instagram"></a>
-                    <a href="https://dhanesh-raj.github.io/dhaneshraj/"><img src="./github-icon.png" alt="GitHub"></a>
+                    <a href="https://www.linkedin.com/in/dhaneshraj/"><img src="./linkedin-icon.png" alt="LinkedIn"></a>
+                    <a href="https://www.facebook.com/imdhaneshraj"><img src="./facebook-icon.png" alt="Facebook"></a>
+                    <a href="https://www.instagram.com/dhanesh.raj/"><img src="./instagram-icon.png" alt="Instagram"></a>
+                    <a href="https://github.com/Dhanesh-raj"><img src="./github-icon.png" alt="GitHub"></a>
                 </div>
                 <div class="contact-info">
                     <p>Address:<br>
