--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Ariadne Snyder. All Rights Reserved.</p>
+        <p>&copy; 2024 Dhanesh Raj All Rights Reserved.</p>
         <div class="social-media">
             <a href="https://www.linkedin/dhanesh.raj"><img src="./linkedin-icon.png" alt="LinkedIn"></a>
             <a href="https://www.facebook/dhanesh.raj"><img src="./facebook-icon.png" alt="Facebook"></a>
