--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <section class="intro">
             <div class="intro-left">
-                <img src="path/to/profile.img" alt="Profile Picture" class="profile-img">
+                <img src="profile.img" alt="Profile Picture" class="profile-img">
                 <h1>Dhanesh Raj</h1>
                 <p>Senior Research Associate</p>
                 <button>Email me</button>
