--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
     </main>
     <footer>
         <p>&copy; 2024 Dhanesh Raj All Rights Reserved.</p>
-        <div class="social-media">
-            <a href="https://www.linkedin/dhanesh.raj"><img src="./linkedin-icon.png" alt="LinkedIn"></a>
-            <a href="https://www.facebook/dhanesh.raj"><img src="./facebook-icon.png" alt="Facebook"></a>
-            <a href="https://www.instagram/dhanesh.raj"><img src="./instagram-icon.png" alt="Instagram"></a>
-            <a href="https://dhanesh-raj.github.io/dhaneshraj/"><img src="./github-icon.png" alt="GitHub"></a>
-        </div>
+       <!-- <div class="social-media">-->
+            <!--<a href="https://www.linkedin/dhanesh.raj"><img src="./linkedin-icon.png" alt="LinkedIn"></a>-->
+           <!-- <a href="https://www.facebook/dhanesh.raj"><img src="./facebook-icon.png" alt="Facebook"></a>-->
+            <!--<a href="https://www.instagram/dhanesh.raj"><img src="./instagram-icon.png" alt="Instagram"></a>-->
+            <!--<a href="https://dhanesh-raj.github.io/dhaneshraj/"><img src="./github-icon.png" alt="GitHub"></a>-->
+      <!--  </div>-->
     </footer>
 </body>
 </html>
