--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 </div>
             </div>
             <div class="intro-right">
-                <h2>About Me (she/her)</h2>
-                <p>I am an energetic and passionate college student working towards a communications degree at Murrayfield School of Marketing. I aim to use my skills in writing, photography, and public relations in a summer internship at your organization.</p>
+                <h2>About Me </h2>
+                <p>Currently pursuing my Ph.D. in Computer Engineering under Dr. Maneesha V Ramesh with research interests in  wireless networks and pervasive computing, specifically Quality of Service (QoS) in marine 5G heterogeneous networks. </p>
                 <div class="scholar-links">
                     <a href="https://dhanesh-raj.github.io/dhaneshraj/"><img src="./google-scholar-icon.png" alt="Google Scholar"></a>
                     <a href="https://dhanesh-raj.github.io/dhaneshraj/"><img src="./researchgate-icon.png" alt="ResearchGate"></a>
