--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                 <h2>About Me </h2>
                 <p>Currently pursuing my Ph.D. in Computer Engineering under Dr. Maneesha V Ramesh with research interests in  wireless networks and pervasive computing, specifically Quality of Service (QoS) in marine 5G heterogeneous networks. </p>
                 <div class="scholar-links">
-                    <a href="https://dhanesh-raj.github.io/dhaneshraj/"><img src="./google-scholar-icon.png" alt="Google Scholar"></a>
-                    <a href="https://dhanesh-raj.github.io/dhaneshraj/"><img src="./researchgate-icon.png" alt="ResearchGate"></a>
-                    <a href="https://dhanesh-raj.github.io/dhaneshraj/"><img src="./orcid-icon.png" alt="Orcid"></a>
+                    <a href="https://scholar.google.com/citations?user=CSB7DU0AAAAJ"><img src="./google-scholar-icon.png" alt="Google Scholar"></a>
+                    <a href="https://www.researchgate.net/profile/Dhanesh-Raj"><img src="./researchgate-icon.png" alt="ResearchGate"></a>
+                    <a href="https://orcid.org/0000-0002-0558-1719"><img src="./orcid-icon.png" alt="Orcid"></a>
                 </div>
                 <div class="resume-portfolio-buttons">
                     <a href="./resume.pdf" class="btn">Resume</a>
