--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                        Amrita Vishwa Vidyapeetham<br>
                        Amritapuri Campus</p>
                     <p>Email:<br>
-                       <a href="mailto:dhaneshraj@ieee.org">dhaneshraj@ieee.org</a><br>
+                       <a href="mailto:dhaneshraj@am.amrita.edu">dhaneshraj@am.amrita.edu</a><br>
                        <a href="mailto:dhaneshraj@ieee.org">dhaneshraj@ieee.org</a></p>
                     <p>Phone Number:<br>
                        +91 9846309356</p>
